From 6d211aa (noise):
====================

In examples/simparms/replicatesim.yaml,

(*) Add input parameters eff_aprtr and eff_Q
(*) Change default value of Trx to 162 K from 50 K

In scripts/replicate_sim.py,

(*) Accept input parameters eff_aprtr and eff_Q from the YAML file
with template in examples/simparms/replicatesim.yaml

From 58b3903 (pyuvsim):
======================

In scripts/altsim_interface.py,

(*) In function simparms_from_pyuvsim_to_prisim(), change some
defaults, and fix some parameters

From 0d3c19c (noise):
====================

In examples/simparms/defaultparms.yaml,

(*) Add parameters eff_aprtr (for aperture efficiency), and eff_Q
(quantization efficiency) for enabling better estimates of thermal
noise RMS

In scripts/run_prisim.py,

(*) Read and process eff_aprtr, and eff_Q parameters from the input
YAML file and pass appropriate values while creating instances of
class InterferometerArray.

From fd82446 (master):
=====================

In prisim/interferometry.py,

(*) In function thermalNoiseRMS(), revise RMS calculation by removing
the factor 2 inside square root to account for a complex-valued rms
that is made of both real and imaginary parts. Earlier the presence
of the factor 2 inside the square root corresponds to only the real
or the imaginary rms. Update docstring accordingly with a reference
for the equation used from SIRA II

(*) In function generateNoise(), update docstring to make it explicit
that the input RMS corresponds to a complex value that comprises of
both real and imaginary values and therefore, only 1/sqrt(2) of that
goes into the real and imaginary values. Include a reference to the
equations in SIRA II

(*) In member function generate_noise() of class InterferometerArray,
revise RMS calculation by removing the factor 2 inside square root
to account for a complex-valued rms that is made of both real and
imaginary parts. Earlier the presence of the factor 2 inside the